test/vm/fails/invalid_binary_and.js
binary_hex("FF") & binary_hex("FF00");